--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <title>Cool Robs Cds</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <div class="textcontainer">
+        <h1 id="header">Welome to Cool Robs CDs for rent</h1>
+        <h2>How to appropriately use this website:</h2>
+        <p>This website serves the purpose of figuring out which cd in our collection you want to rent and how much it
+            will
+            cost you.
+        </p>
+    </div>
+    <div class="buttoncontainer">
+        <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="recomendation();">Figure out your CD!</button>
+        <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="price();">Figure out your price!</button>
+        <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="summary();">Full summary!</button>
+    </div>
+    <script src="main.js"></script>
 </body>
+
 </html>
-
-
