--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="price();">Figure out your price!</button>
         <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="summary();">Full summary!</button>
     </div>
+
+    <form onsubmit="return false;">
+        <label>Name:</label><br>
+        <input type="text" id="input_name"><br>
+        <input type="submit" onclick="getFormInput()">
+    </form>
+
     <script src="main.js"></script>
 </body>
 
