--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <input type="submit" onclick="getFormInput()">
     </form>
 
+    <h3 id="welcomeMessage"></h3>
+
     <script src="main.js"></script>
 </body>
 
