--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <form onsubmit="return false;">
         <label>Name:</label><br>
-        <input type="text" id="input_name"><br>
+        <input type="text" id="input_name" value="Default Name"><br>
         <input type="submit" onclick="getFormInput()">
     </form>
 
