--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
 </head>
 
 <body>
-    <div class="textcontainer">
-        <h1 id="welcomeMessage" id="header"></h1>
-        <h2>How to appropriately use this website:</h2>
-        <p>This website serves the purpose of figuring out which cd in our collection you want to rent and how much it
-            will
-            cost you.
-        </p>
-    </div>
-    <div class="buttoncontainer">
-        <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="recomendation();">Figure out your CD!</button>
-        <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="price();">Figure out your price!</button>
-        <button class="w3-btn w3-????? w3-xxlarge" type="button" onclick="summary();">Full summary!</button>
-    </div>
-
     <form onsubmit="return false;">
         <label>Name:</label><br>
         <input type="text" id="input_name"><br>
         <input type="submit" onclick="getNameInput()">
     </form>
+
+    <div class="textcontainer">
+        <h1 id="welcomeMessage" id="header"></h1>
+        <h2>How to appropriately use this website:</h2>
+        <p>This website serves the purpose of figuring out which cd in our collection you want to rent and how much it
+            will cost you.
+        </p>
+    </div>
+
+
 
     <script src="main.js"></script>
 </body>
