fix name validation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 id="welcomeMessage" id="header"></h1>
         <form onsubmit="return false;">
             <label>Name:</label><br>
-            <input type="text" id="input_name" required><br>
+            <input type="text" id="input_name" pattern="1234567890" title="Invalid Name" required><br>
             <input type="submit" onclick="getNameInput()">
         </form>
         <h2>How to appropriately use this website:</h2>
