--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="textcontainer">
         <h1 id="welcomeMessage" id="header"></h1>
         <form onsubmit="return false;">
-            <label>Name:</label><br>
-            <input type="text" id="input_name" pattern="1234567890" title="Invalid Name" required><br>
+            <label>Name or Username:</label><br>
+            <input type="text" id="input_name" required><br>
             <input type="submit" onclick="getNameInput()">
         </form>
         <h2>How to appropriately use this website:</h2>
@@ -21,16 +21,10 @@
             will cost you.
         </p>
         <p>Choose your genre down below</p>
-        <label for="cds">Choose A Genre:</label>
-        <select id="cds" name="cds">
-            <option value="choose">Choose Here</option>
-            <option value="weird">Something Weird</option>
-            <option value="alternative">Something Alternative</option>
-            <option value="older">Something Older</option>
-            <option value="pop">Something Pop</option>
-            <option value="parody">Something Parody</option>
-            <option value="emotional">Something Emotional</option>
+        <label for="genreSelect">Choose A Genre:</label>
+        <select id="genreSelect" name="genreSelect">
         </select>
+        <input type="submit" onclick="changeBackgroundTheme()">
     </div>
 
 
