--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <label for="genreSelect">Choose A Genre:</label>
         <select id="genreSelect" name="genreSelect">
         </select>
-        <input type="submit" onclick="changeBackgroundTheme()">
+        <input type="submit" onclick="addImage()">
     </div>
 
 
