--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </select>
         <input type="submit" onclick="addImage()">
     </div>
-<image id="theCd"></image>
+<img id="theCd">
 
 
     <script src="main.js"></script>
