--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <label for="genreSelect">Choose A Genre:</label>
         <select id="genreSelect" name="genreSelect">
         </select>
-        <input type="submit" onclick="addImage()">
+        <input type="submit">
     </div>
-<img id="theCd">
 
 
     <script src="main.js"></script>
