--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <label for="genreSelect">Choose A Genre:</label>
         <select id="genreSelect" name="genreSelect">
         </select>
-        <input type="submit">
+        <input type="submit" onclick="yourCd()">
+        <h2>What you have selected</h2>
+        <p id="cdName"></p>
+        <p id="dailyPrice"></p>
     </div>
 
 
